# Inventra

./: README.md  app.py  pyproject.toml  requirements.txt  setup.py
ML_Project.egg-info/: PKG-INFO
src/: exception.py  logger.py
src/components/: data_ingestion.py  data_transformation.py
utils/: invoice.py
