[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ML-Project"
version = "0.0.1"
description = "Machine learning project for data analysis and modeling"
authors = [
    { name="Dilpreet Singh" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn"
]